# internal/entity/shop.go
@@ -15,22 +15,22 @@ type Shop struct {
 }
 
 type CreateShop struct {
-	Name        string     `json:"name"`
-	Description string     `json:"description"`
-	OpenTime    time.Time  `json:"open_time"`
-	CloseTime   time.Time  `json:"close_time"`
-	IsClosed    bool       `json:"is_closed"`
-	Menuitems   []MenuItem `json:"menuitems"`
-	UserId      int64      `json:"user_id"`
+	Name        string        `json:"name"`
+	Description string        `json:"description"`
+	OpenTime    time.Time     `json:"open_time"`
+	CloseTime   time.Time     `json:"close_time"`
+	IsClosed    bool          `json:"is_closed"`
+	Menuitems   []GetMenuItem `json:"menuitems"`
+	UserId      int64         `json:"user_id"`
 }
 
-type MenuItem struct {
+type GetMenuItem struct {
 	ID          int64     `json:"id"`
 	Name        string    `json:"name"`
 	Description string    `json:"description"`
 	Photo       string    `json:"photo"`
 	Price       int32     `json:"price"`
-	Shop        int64     `json:"shop_id"`
+	ShopId      int64     `json:"shop_id"`
 	CreatedAt   time.Time `json:"created_at"`
 }
 
@@ -43,12 +43,17 @@ type UpdateShopInfo struct {
 	UserId      int64     `json:"user_id"`
 }
 
-type CreateMenuItem struct {
+type MenuItem struct {
 	Name        string `json:"name"`
 	Description string `json:"description"`
 	Photo       string `json:"photo"`
 	Price       int32  `json:"price"`
-	ShopID      int64  `json:"shop_id"`
+}
+
+type CreateMenuItem struct {
+	MenuItems []MenuItem `json:"menu_items"`
+	ShopId    int64      `json:"shop_id"`
+	UserId    int64      `json:"user_id"`
 }
 
 type UpdateMenuItem struct {
